// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProductPrice stories snapshot > Default story renders and matches snapshot 1`] = `
<div>
  <div
    class="items-center gap-2"
  >
    <span
      aria-label="Current price: $99.99"
      aria-live="polite"
      class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
    >
      $99.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      Current price: $99.99
    </span>
     
  </div>
</div>
`;

exports[`ProductPrice stories snapshot > OnSale story renders and matches snapshot 1`] = `
<div>
  <div
    class="items-center gap-2"
  >
    <span
      aria-label="Current price: $79.99"
      aria-live="polite"
      class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
    >
      $79.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      Current price: $79.99
    </span>
     
    <span
      aria-label="List price: $99.99"
      class="text-sm font-medium leading-none text-left line-through text-muted-foreground"
    >
      $99.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      List price: $99.99
    </span>
  </div>
</div>
`;

exports[`ProductPrice stories snapshot > PriceRange story renders and matches snapshot 1`] = `
<div>
  <div
    class="items-center gap-2"
  >
    <span
      aria-label="Current price: £191.99"
      aria-live="polite"
      class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
    >
      £191.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      Current price: £191.99
    </span>
     
    <span
      aria-label="List price: £320.00"
      class="text-sm font-medium leading-none text-left line-through text-muted-foreground"
    >
      £320.00
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      List price: £320.00
    </span>
  </div>
</div>
`;

exports[`ProductPrice stories snapshot > WithPromoCallout story renders and matches snapshot 1`] = `
<div>
  <div
    class="items-center gap-2"
  >
    <span
      aria-label="Current price: $79.99"
      aria-live="polite"
      class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
    >
      $79.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      Current price: $79.99
    </span>
     
    <span
      aria-label="List price: $99.99"
      class="text-sm font-medium leading-none text-left line-through text-muted-foreground"
    >
      $99.99
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      List price: $99.99
    </span>
  </div>
  <div
    class="items-center gap-2"
  >
    <span
      class="line-clamp-2 text-[inherit] font-medium"
    >
      Get 20% off of this item.
    </span>
  </div>
</div>
`;

exports[`ProductPrice stories snapshot > WithQuantity story renders and matches snapshot 1`] = `
<div>
  <div
    class="items-center gap-2"
  >
    <span
      aria-label="Current price: $299.97"
      aria-live="polite"
      class="leading-7 [&:not(:first-child)]:mt-6 text-left font-semibold"
    >
      $299.97
    </span>
    <span
      aria-atomic="true"
      aria-live="polite"
      class="sr-only"
    >
       
      Current price: $299.97
    </span>
     
  </div>
</div>
`;
